web-infras/parser/tests/fixtures/babel/es2015/statements/label-invalid-func-generator/output.txt
[SyntaxError]: Generator functions can only be declared at the top level or inside a block. (1,6)
1|foo: function* bar() {}
 |    ^
